helm/istio/destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: zeaz
spec:
  host: zeaz-api
  subsets:
    - name: stable
      labels:
        version: v1
    - name: canary
      labels:
        version: v2
    - name: shadow
      labels:
        version: shadow
